Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -233,7 +233,35 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 >> - Satu Namespace terdiri dari beberapa Pod.
 >> - Satu Pod terdiri dari beberapa Container.
 >> <br/><br/>
->> Cluster -> Namespace -> Pod -> Container 
+>> **Cluster -> Namespace -> Pod -> Container **
+>>
+>> Pada Kubernetes : <br/><br/>
+>> 
+>> (1) Cluster :  
+>> - Cluster adalah unit terbesar dalam Kubernetes yang mengelola seluruh sumber daya.
+>> - Dalam satu Cluster, Anda dapat memiliki banyak Namespace untuk memisahkan sumber daya secara logis.
+>> - Namespace dilakukan untuk :
+>>   - Membagi lingkungan (misalnya, `dev`, `staging`, `prod`).
+>>   - Mengatur aplikasi berdasarkan tim atau proyek.
+>>   - Membatasi akses dan sumber daya (menggunakan Role-Based Access Control atau RBAC).
+>> 
+>> <br/>
+>> (2) Namespace :
+>> - Namespace terdiri dari banyak Pod.
+>> - Pod dalam satu Namespace dapat saling berkomunikasi secara langsung tanpa konfigurasi tambahan (karena mereka berbagi ruang jaringan Namespace yang sama).
+>> 
+>> <br/>
+>> (3) Satu Pod terdiri dari beberapa Container :
+>> - Statement tersebut benar, tetapi tidak selalu
+>> - Secara umum, satu Pod biasanya hanya berisi satu container (kasus umum).
+>> - Namun, satu Pod dapat berisi beberapa container jika mereka saling bergantung dan perlu berbagi sumber daya antara satu sama lain (seperti berbagi Network atau Volume).
+>>   Misalnya : <br/>
+>>   => Network (IP Address yang sama) : <br/>
+>>    Semua container dalam Pod berbagi alamat IP dan Port yang sama. <br/>
+>>   => Storage (Volume yang sama) : <br/>
+>>    Container dapat berbagi file atau data melalui volume yang sama.  <br/> <br/>
+>> 
+>>   Dalam kasus umum, satu Pod hanya berisi satu container, Namun, ada situasi di mana beberapa container harus bekerja sama erat di dalam satu Pod.
 
 
 
