Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -263,6 +263,21 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 >> 
 >>   Dalam kasus umum, satu Pod hanya berisi satu container, Namun, ada situasi di mana beberapa container harus bekerja sama erat di dalam satu Pod.
 
+- Dengan load balancing, Kubernetes memastikan bahwa tidak ada satu container pun yang dibebani dengan terlalu banyak trafik atau permintaan. Semua container mendapat bagian yang adil dari trafik yang masuk.
+
+- Contoh: Jika Anda menjalankan aplikasi web dengan beberapa instance container di Kubernetes, Kubernetes akan memastikan permintaan pengguna didistribusikan secara merata ke semua instance container, sehingga aplikasi tetap responsif.
+
+ <br/> <br/>
+
+[3] Penskalaan Otomatis (Auto-scaling):
+- Penskalaan otomatis memungkinkan Kubernetes menambah atau mengurangi jumlah container (atau pod) secara otomatis berdasarkan kebutuhan aplikasi. Hal ini dilakukan untuk mengatasi lonjakan trafik atau beban, serta menghemat sumber daya ketika beban aplikasi rendah.
+- Penskalaan dapat dilakukan berdasarkan dua faktor utama: penskalaan horizontal (menambah lebih banyak instance container) atau penskalaan vertikal (menambah sumber daya, seperti CPU atau memori, untuk container yang sudah ada).
+
+- Contoh :
+  - Jika aplikasi Anda mendapati lebih banyak trafik (misalnya, saat promosi atau puncak penjualan), Kubernetes akan otomatis menambah jumlah container untuk menangani permintaan lebih banyak.
+  - Jika trafik menurun, Kubernetes akan mengurangi jumlah container untuk menghemat sumber daya.
+
+
 
 
 ------
