Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -278,7 +278,10 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
   - Jika trafik menurun, Kubernetes akan mengurangi jumlah container untuk menghemat sumber daya.
 
 
-
+[4] Pemulihan dan Ketersediaan Tinggi (Self-healing and High Availability) : 
+- Self-healing berarti Kubernetes dapat mendeteksi jika ada container atau pod yang gagal, dan secara otomatis akan mencoba untuk memperbaikinya atau menggantinya dengan instance baru untuk memastikan aplikasi tetap berjalan.
+- High availability berarti memastikan aplikasi tetap berjalan meski ada kerusakan pada beberapa node di dalam kluster. Kubernetes secara otomatis akan memindahkan container ke node lain jika suatu node gagal.
+- Contoh: Jika salah satu container tiba-tiba berhenti berfungsi, Kubernetes akan mendeteksi kegagalan ini dan segera meluncurkan container baru untuk menggantikan container yang gagal tersebut.
 
 ------
 ------
