Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -283,6 +283,13 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 - High availability berarti memastikan aplikasi tetap berjalan meski ada kerusakan pada beberapa node di dalam kluster. Kubernetes secara otomatis akan memindahkan container ke node lain jika suatu node gagal.
 - Contoh: Jika salah satu container tiba-tiba berhenti berfungsi, Kubernetes akan mendeteksi kegagalan ini dan segera meluncurkan container baru untuk menggantikan container yang gagal tersebut.
 
+
+## B) Korelasi :
+- Kubernetes menjalankan dan mengelola PostgreSQL dan Hasura dalam skala besar.
+- Kubernetes berjalan di atas RHEL untuk menyediakan infrastruktur containerized.
+
+
+
 ------
 ------
 # Command & Query yang berkorelasi 
