Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -289,6 +289,14 @@ Docker memungkinkan Anda untuk mengontrol penggunaan sumber daya seperti CPU, me
 - Kubernetes berjalan di atas RHEL untuk menyediakan infrastruktur containerized.
 
 
+# 5. Hasura DDN - Version 3 :
+## A) Konsep :
+- Hasura secara otomatis membuat API GraphQL dari database PostgreSQL. API ini memungkinkan Anda untuk dengan mudah mengambil, menambah, dan mengubah data.
+
+## B) Korelasi :
+- Hasura membaca struktur database PostgreSQL untuk membuat GraphQL API.
+- Hasura dapat dijalankan sebagai Service di Kubernetes.
+
 
 ------
 ------
