Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -331,7 +331,9 @@ Jika Kita mencoba menginstal atau menghapus perangkat lunak tanpa menggunakan `s
 
 
 
-
-
-
 #### (2) `yum`
+
+-> yum adalah alat "Package Manager" yang digunakan di distribusi Linux seperti Red Hat, CentOS, dan Fedora.
+yum digunakan untuk mengelola perangkat lunak yang terpasang di sistem, seperti menginstal, memperbarui, menghapus, atau mencari paket perangkat lunak.
+<br/><br/>
+-> YUM secara otomatis mengelola repositori perangkat lunak (tempat di mana paket perangkat lunak disimpan) dan memastikan Anda dapat dengan mudah menginstal dan memperbarui perangkat lunak. <br/><br/>
