Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -336,4 +336,19 @@ Jika Kita mencoba menginstal atau menghapus perangkat lunak tanpa menggunakan `s
 -> yum adalah alat "Package Manager" yang digunakan di distribusi Linux seperti Red Hat, CentOS, dan Fedora.
 yum digunakan untuk mengelola perangkat lunak yang terpasang di sistem, seperti menginstal, memperbarui, menghapus, atau mencari paket perangkat lunak.
 <br/><br/>
--> YUM secara otomatis mengelola repositori perangkat lunak (tempat di mana paket perangkat lunak disimpan) dan memastikan Anda dapat dengan mudah menginstal dan memperbarui perangkat lunak. <br/><br/>
+-> YUM secara otomatis mengelola 'Software Repository' (tempat di mana paket perangkat lunak disimpan) dan memastikan Anda dapat dengan mudah menginstal dan memperbarui perangkat lunak. <br/><br/>
+
+#### (3) `update` 
+
+-> Perintah update memberitahu YUM untuk memeriksa 'Software Repository' yang telah dikonfigurasi, kemudian memperbarui perangkat lunak yang ada di sistem ke versi terbaru yang tersedia. <br/><br/>
+
+-> Ketika Anda menjalankan yum update, YUM akan mencari pembaruan untuk semua paket perangkat lunak yang terpasang di sistem Anda. Jika ada pembaruan yang tersedia, maka YUM akan mengunduh dan menginstalnya. <br/><br/>
+
+Contoh: <br/>
+Misalnya, jika Anda memiliki aplikasi nginx di sistem Anda, dan pengembangnya merilis pembaruan, yum update akan mendeteksi pembaruan tersebut dan menginstalnya. <br/><br/>
+
+`sudo yum update -y` pada dasarnya digunakan untuk mengupdate semua paket perangkat lunak yang sudah terpasang di komputer Anda yang dikelola oleh YUM (Yellowdog Updater, Modified), jika pembaruan tersedia. <br/><br/>
+
+"Dikelola oleh YUM" berarti Software tersebut diinstal dengan YUM (misalnya menggunakan `sudo yum install nama_software` ) dan Software itu akan dipantau dan dikelola oleh YUM untuk pembaruan dan penghapusan. <br/><br/>
+
+
