Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -352,3 +352,6 @@ Misalnya, jika Anda memiliki aplikasi nginx di sistem Anda, dan pengembangnya me
 "Dikelola oleh YUM" berarti Software tersebut diinstal dengan YUM (misalnya menggunakan `sudo yum install nama_software` ) dan Software itu akan dipantau dan dikelola oleh YUM untuk pembaruan dan penghapusan. <br/><br/>
 
 
+#### `-y`
+- `-y` adalah opsi yang digunakan untuk "mengonfirmasi otomatis" setiap prompt yang muncul selama proses pembaruan.
+-  Biasanya, ketika Anda menjalankan yum update, sistem akan meminta konfirmasi untuk melanjutkan proses pembaruan, seperti "Apakah Anda yakin ingin melanjutkan?". Dengan menambahkan `-y` , Anda memberitahu sistem untuk secara otomatis menyetujui semua konfirmasi tersebut, sehingga tidak ada perlu interaksi manual selama proses pembaruan.
