Update 9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md

--- a/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
+++ b/Research for SOP/9. Korelasi antara Linux, Docker, SQL & Postgre SQL, Kubernetes, dan Hasura DDN.md
@@ -352,6 +352,16 @@ Misalnya, jika Anda memiliki aplikasi nginx di sistem Anda, dan pengembangnya me
 "Dikelola oleh YUM" berarti Software tersebut diinstal dengan YUM (misalnya menggunakan `sudo yum install nama_software` ) dan Software itu akan dipantau dan dikelola oleh YUM untuk pembaruan dan penghapusan. <br/><br/>
 
 
-#### `-y`
+#### (4)  `-y`
 - `-y` adalah opsi yang digunakan untuk "mengonfirmasi otomatis" setiap prompt yang muncul selama proses pembaruan.
 -  Biasanya, ketika Anda menjalankan yum update, sistem akan meminta konfirmasi untuk melanjutkan proses pembaruan, seperti "Apakah Anda yakin ingin melanjutkan?". Dengan menambahkan `-y` , Anda memberitahu sistem untuk secara otomatis menyetujui semua konfirmasi tersebut, sehingga tidak ada perlu interaksi manual selama proses pembaruan.
+
+
+#### Kesimpulan :
+
+Jadi, `sudo yum update -y` berarti:
+
+- `sudo` :  memberikan izin administrator.
+- `yum` :  adalah alat "Package Manager" untuk mengelola Software.
+- `update` : memberitahukan yum untuk memperbarui Software di sistem.
+- `-y` : secara otomatis menyetujui setiap konfirmasi selama proses pembaruan.
