--- a/Research for SOP/12. Menghubungkan Hasura V3 ke Elastic via Open Telemetry.md
+++ b/Research for SOP/12. Menghubungkan Hasura V3 ke Elastic via Open Telemetry.md
@@ -1,1 +1,19 @@
 # Menghubungkan Hasura V3 ke Elastic via Open Telemetry
+
+
+
+----------------------
+----------------------
+# Catatan :
+# Error yang tadi dihadapi
+
+## 1. OTEL (Open Telemetry) belum aktif
+Error Message : 
+```
+app_hasura_sql_connector2-1  | OpenTelemetry trace error occurred. Exporter otlp encountered the following error(s): the grpc server returns error (The service is currently unavailable): , detailed error message: error trying to connect: tcp connect error: Connection refused (os error 111)
+```
+Solusi : 
+
+<Kasih Penjelasan lebih lengkap>
+
+## 2. 
