Update 12. Menghubungkan Hasura V3 ke Elastic via Open Telemetry.md

--- a/Research for SOP/12. Menghubungkan Hasura V3 ke Elastic via Open Telemetry.md
+++ b/Research for SOP/12. Menghubungkan Hasura V3 ke Elastic via Open Telemetry.md
@@ -12,8 +12,13 @@ Error Message :
 ```
 app_hasura_sql_connector2-1  | OpenTelemetry trace error occurred. Exporter otlp encountered the following error(s): the grpc server returns error (The service is currently unavailable): , detailed error message: error trying to connect: tcp connect error: Connection refused (os error 111)
 ```
-Solusi : 
+Solusi : Nyalakan Container yang berisi OTEL  <br/>
+dengan menjalankan Command Docker :
+```
+docker start <container_id>
+```
 
-<Kasih Penjelasan lebih lengkap>
+<br/> <br/> <br/>
+....Kasih Penjelasan lebih lengkap......Buat analisa keterangan Error nya ......
 
-## 2. 
+## 2.
