--- a/Research for SOP/12. Menghubungkan Hasura V3 ke Elastic via Open Telemetry.md
+++ b/Research for SOP/12. Menghubungkan Hasura V3 ke Elastic via Open Telemetry.md
@@ -21,4 +21,41 @@ docker start <container_id>
 <br/> <br/> <br/>
 ....Kasih Penjelasan lebih lengkap......Buat analisa keterangan Error nya ......
 
-## 2.
+## 2. Pada Container OTEL, mengalami Bentrok pada Port
+
+Container OTEL sudah nyala, tetapi terdapat bentrok pada Port milik Container OTEL.   <br/>
+
+Error Message : 
+```
+Error response from daemon: driver failed programming external connectivity on endpoint mysupergraph5-otel-collector-1 (18a744cb5da0e26465e0f2c62bcb3ac07520c2f488b95e36663c966517450ea3): Bind for 0.0.0.0:4317 failed: port is already allocated
+```
+Pada Error diatas, Port yang bentrok adalah Port 4317
+
+Solusi :
+1. Kita deteksi semua container yang memakai Port 4317
+Command cara mencari nya.... terus nanti terakhir pakai Command untuk mendeteksi semua container yang memiilki Port 4317
+
+2. Hapus semua Container OTEL (4317 adalah Port OTEL, sehingga semua Container OTEL memakai Port 4317)
+Command : `docker rm <container_id>`
+
+3. Jalankan `docker compose down` dan `docker compose up`
+-> command `docker compose down` menghapus semua Container  ...(coba make sure ini cari di internet)
+-> command `docker compose up` membuat Semua Container dari awal berdasarkan File Konfigurasi
+
+Note : (Container yang gagal : mysupergraph3 )
+(sepertinya-> make sure lagi )Container OTEL yang kita hapus merupakan Container yang terbentuk saat gagal membuat OTEL, dan dari banyak Container tersebut, hanya 1 yang berhasil,
+yang mana Container OTEL yang gagal tersebut sudah tidak mempunyai File Konfigurasi lagi.
+Sehingga saat kita jalankan lagi  `docker compose up`, Container yang gagal tersebut tidak terbentuk lagi 
+(sepertinya-> make sure lagi )
+
+## 3. terdapat Typo pada File Konfigurasi `otel-collector-config.yaml`
+
+Error Message :
+```
+Error: failed to get config: cannot unmarshal the configuration: 1 error(s) decoding:
+
+* '' has invalid keys: aexporters
+2024/12/24 08:20:03 collector server run finished with error: failed to get config: cannot unmarshal the configuration: 1 error(s) decoding:
+
+* '' has invalid keys: aexporters
+```
